-fixed bug z-index transparent summary -fixed img bug addTask

--- a/styles/summary.css
+++ b/styles/summary.css
@@ -493,6 +493,7 @@ body{
 
     .transparent{
       color: transparent !important;
+      z-index: -10;
     }
     .transparent .footer-text{
       color: transparent !important;
